# Eilend

./: Cargo.toml  test.elnd
EilendCompiler/compiler/: pyproject.toml  test.elnd
EilendCompiler/compiler/eilend/: main.py
EilendCompiler/compiler/eilend/lexer/: lexer.py
EilendRust/src/eilendvm/: call_stack.rs  devtools.rs  mod.rs  opcodes.rs  safety.rs  vm.rs
EilendRust/src/eilendvm/object/: base_object.rs  float_object.rs  func_object.rs  int_object.rs  mod.rs  null_object.rs  object_macros.rs  plain_object.rs  str_object.rs
EilendRust/src/tests/: mod.rs
EilendZig/: build.zig  build.zig.zon
EilendZig/src/: chunk.zig  devtools.zig  main.zig  opcodes.zig
compiler/: test.elnd
compiler/eilend/lexer/: token.py
compiler/syntactix/lexical/: token.py
eilend-compiler/: .gitignore  README.md  main.py  pyproject.toml  test.elnd
eilend-compiler/eilend/lexer/: lexer.py  token.py
eilend-compiler/eilend/parser/: constants.py  desugar.py  exceptions.py  invariants.py  parser.py
eilend-compiler/eilend/parser/nodes/: base.py  control.py  expression.py  stmt.py
eilend-compiler/tests/lexer/: conftest.py  strategies.py  test_invalid.py  test_valid.py
eilend-docs/: README.md  eilend.ebnf  eilend_example.elnd  lua.ebnf  pyproject.toml
src/: main.rs
src/eilendvm/: chunk.rs  devtools.rs  io.rs  mod.rs  opcodes.rs  safety.rs  value_stack.rs  vm.rs
src/eilendvm/object/: base_object.rs  bool_object.rs  float_object.rs  int_object.rs  mod.rs  null_object.rs  object_macros.rs  plain_object.rs  str_object.rs  table.rs
src/tests/: test_scenario.rs
